# incrementor

./: Cargo.toml  LICENSE  README.md  incrementor.example.toml  incrementor.toml
.github/workflows/: ci.yaml  test.yaml
src/: config.rs  git_operations.rs  lib.rs  main.rs
