[package]
name = "incrementor"
version = "1.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
thiserror = "1.0"
indexmap = { version = "2.2.6", features = ["serde"] }
figment = { version = "0.10", features = ["env", "toml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.87"
semver = { version = "1.0.14", features = ["serde"] }
regex = "1.9.1"
toml = "0.8.12"
tracing = "0.1.37"

[dependencies.git2]
version = "0.18.3"
default-features = false

[dev-dependencies]
tempfile = "3.10"
